feat: Insert Promotion
Implement insert promotion api

(#33409120)[https://github.com/amiraliio/avn-promotion/projects/1#card-33409120]

--- a/resource/lang/lang.yaml
+++ b/resource/lang/lang.yaml
@@ -2,4 +2,5 @@ MESSAGES:
   PARAM_EMPTY: "params are empty"
   PARSE_CELLPHONE: "cannot parse cellphone"
   DATA_NOT_FOUND: "data not found"
-  PROMOTION_CODE_IS_REQUIRED: "promotion code is required"
+  BODY_ERROR: "body error"
+  SERIALIZER_ERROR: "serializer error"
